--- a/site/index.html
+++ b/site/index.html
@@ -10,7 +10,7 @@ layout: default
       <p class="lead"><a href="">Pulsar</a> is an open-source distributed pub-sub messaging system from <a href="https://yahoo.github.io">Yahoo!</a></p>
 
       <p class="button-group lead">
-        <a class="btn btn-pulsar btn-lg" href="{{ site.baseurl }}/docs" role="button">Read the docs</a>
+        <a class="btn btn-pulsar btn-lg" href="{{ site.baseurl }}docs/{{ site.latest }}" role="button">Read the docs</a>
         <a class="btn btn-github btn-lg" href="https://github.com/yahoo/pulsar" role="button">GitHub <i class="fa fa-github fa-lg"></i></a>
         <a class="btn btn-stack-overflow btn-lg" href="https://stackoverflow.com/search?q=yahoo+pulsar" role="button">StackOverflow <i class="fa fa-stack-overflow fa-lg"></i></a>
       </p>
