--- a/site/index.html
+++ b/site/index.html
@@ -47,12 +47,12 @@ layout: default
     <div class="row">
       {% for feature in site.data.features %}
       <div class="col-sm-3 card">
-            <div class="card-block">
-              <a href="{{ site.baseurl }}docs/latest/{{ feature.endpoint }}" >
-                    <h3 class="card-title">{{ feature.title }}</h3>
-              </a>
-            <p>{{ feature.content | markdownify }}</p>
-          </div>
+          <div class="card-block">
+            <a href="{{ site.baseurl }}docs/latest/{{ feature.endpoint }}" >
+                  <h3 class="card-title">{{ feature.title }}</h3>
+            </a>
+          <p>{{ feature.content | markdownify }}</p>
+        </div>
       </div>
       {% endfor %}
     </div>
@@ -60,23 +60,18 @@ layout: default
 </div>
 
 
-<div class="index-container">
+<div class="asf-incubator-container">
   <div class="container">
-      <div class="jumbotron-fluid text-center">
-          <p>
-              <a href="https://incubator.apache.org/"><img src="img/apache_incubator.png" title="Apache Incubator" /></a>
-          </p>
-          <p>Apache Pulsar is an effort undergoing incubation at
-              <a href="http://www.apache.org">The Apache Software Foundation (ASF)</a> sponsored by
-              the Apache Incubator PMC. Incubation is required of all newly accepted
-          projects until a further review indicates that the infrastructure, communications, and
-          decision making process have stabilized in a manner consistent with other successful ASF
-          projects. While incubation status is not necessarily a reflection of the completeness or
-          stability of the code, it does indicate that the project has yet to be fully endorsed by
-          the ASF.</p>
-          <p>
-          Apache Pulsar (incubating) is available under <a href="http://www.apache.org/licenses/LICENSE-2.0">
-              Apache License, version 2.0</a>.
-      </div>
+    <div class="text-center">
+      <p>
+        <a href="https://incubator.apache.org/"><img src="img/apache_incubator.png" title="Apache Incubator" /></a>
+      </p>
+      <p>
+        Apache Pulsar is an effort undergoing incubation at <a href="http://www.apache.org">The Apache Software Foundation (ASF)</a> sponsored by the Apache Incubator PMC. Incubation is required of all newly accepted projects until a further review indicates that the infrastructure, communications, and decision making process have stabilized in a manner consistent with other successful ASF projects. While incubation status is not necessarily a reflection of the completeness or stability of the code, it does indicate that the project has yet to be fully endorsed by the ASF.
+      </p>
+      <p>
+        Apache Pulsar (incubating) is available under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License, version 2.0</a>.
+      </p>
+    </div>
   </div>
 </div>
