fix navbar dropdown issues

--- a/site/index.html
+++ b/site/index.html
@@ -28,7 +28,7 @@ layout: default
   <div class="container">
     <div class="jumbotron-fluid text-center">
       <!-- <h2 class="display-4">{{ site.title }}</h2> -->
-      <img src="/img/pulsar.png" />
+      <img class="img-fluid" src="/img/pulsar.png" />
 
       <p class="lead"><a href="">Apache Pulsar</a> is an open-source distributed pub-sub messaging system originally<br />
           created at <a href="https://developer.yahoo.com/open-source/">Yahoo</a> and now part of the <a href="https://apache.org">Apache Software Foundation</a>.</p>
